--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,4 @@
 1. Разработать декодеры и их генерацию из шаблонов сообщений
+2. Перевести на сборку через CMake
+3. Собрать под CentOS 7
+4. Сделать пример использования библиотеки - декодер сообщений для MOEX FAST
